cmake_minimum_required(VERSION 3.10)

project(Cheddar VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS, "${CMAKE_CXX_FLAGS} -Wall")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(CHEDDAR_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(CHEDDAR_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(CHEDDAR_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(ENGINE_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/engine)

include_directories(${CHEDDAR_INSTALL_INCLUDE_DIR})
include_directories(${ENGINE_HEADERS_DIR})

add_subdirectory(src)
